Fix icon spacing and email link

--- a/assets/sass/components/_icons.scss
+++ b/assets/sass/components/_icons.scss
@@ -13,12 +13,12 @@
 
 		li {
 			display: inline-block;
-			padding: 0 2em 0 0;
+			padding: 0 1em;
     		font-size: 1.3em;
 
-			&:last-child {
-				padding-right: 0;
-			}
+			// &:last-child {
+			// 	padding-right: 0;
+			// }
 
 			> a, > span {
 				border: 0;
